second update to project 3

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,6 +2,7 @@
   display: grid;
   flex-direction: column;
   padding-top: 20px;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 }
 .cards__list {
   list-style-type: none;
@@ -11,4 +12,16 @@
   grid-template-columns: repeat(auto-fit, 413px);
   justify-content: center;
   gap: 40px 20px;
+}
+
+@media screen and (max-width: 627px) {
+  .cards {
+    display: flex;
+    justify-content: center;
+  }
+
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    margin: 16px 20px;
+  }
 }
