--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,15 +1,14 @@
-.card {
-  max-width: 413px;
-}
-
 .card__title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__image {
-  width: 413px;
+  width: 100%;
   height: 413px;
   object-fit: cover;
   display: block;
@@ -20,14 +19,42 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .card__like-btn {
-  background-image: url(../images/like.svg.svg);
+  background-image: url(../images/like.svg);
+  background-image: repeat-no;
   width: 23px;
   height: 20px;
   order: none;
   color: transparent;
   opacity: 40%;
   border: none;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 1;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  .card__like-btn {
+    width: 20px;
+    height: 18px;
+  }
+
+  .card__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
