--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,11 +2,13 @@
   display: flex;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 34px 20px;
+  padding: 34px 20px 20px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 }
 
 .profile__avatar {
+  height: 190px;
+  width: 190px;
   margin-right: 20px;
   border-radius: 10px;
 }
@@ -14,6 +16,7 @@
 .profile__column {
   display: flex;
   flex-direction: column;
+  margin: 0 0 20px;
 }
 
 .profile__name {
@@ -59,4 +62,38 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .profile__avatar {
+    margin: 0 0 12px;
+    height: 80px;
+    width: 80px;
+  }
+
+  .profile__name {
+    font-size: 20px;
+    margin: 0 0 6px;
+  }
+
+  .profile__description {
+    margin: 0 0 32px;
+  }
+
+  .profile__column {
+    font-size: 20px;
+    margin: 0 0 20px;
+  }
+
+  .profile__add-btn {
+    margin: 0;
+  }
 }
