--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,33 +5,30 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 353px;
 }
 
 .card__image {
   width: 100%;
   height: 413px;
   object-fit: cover;
-  display: block;
   border-radius: 10px;
+  display: block;
 }
 
 .card__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-sizing: border-box;
 }
 
 .card__like-btn {
   background-image: url(../images/like.svg);
-  background-image: repeat-no;
   width: 23px;
   height: 20px;
-  order: none;
-  color: transparent;
+  background-color: transparent;
   opacity: 40%;
   border: none;
-  flex-shrink: 0;
 }
 
 @media screen and (max-width: 627px) {
@@ -42,19 +39,13 @@
   .card__title {
     font-size: 16px;
     line-height: 1;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
   }
 
   .card__like-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20px;
     height: 18px;
-  }
-
-  .card__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
   }
 }
