updates to normalize.css and Media Queries

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -23,7 +23,7 @@
 }
 
 .card__like-btn {
-  background-image: url(../images/like.svg);
+  background: url(../images/like.svg) center no-repeat;
   width: 23px;
   height: 20px;
   background-color: transparent;
@@ -45,7 +45,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20px;
-    height: 18px;
   }
 }
