--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -47,7 +47,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-top: auto;
+  margin-top: 18px;
   border: none;
   background: none;
   font-weight: 500;
