--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,4 +1,5 @@
 .card__title {
+  margin: 0 auto;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -20,15 +21,22 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 12px;
 }
 
 .card__like-btn {
-  background: url(../images/like.svg) center no-repeat;
+  background: url(../images/like.svg) center/contain no-repeat;
+  cursor: pointer;
   width: 23px;
   height: 20px;
   background-color: transparent;
-  opacity: 40%;
+  opacity: 0.4;
   border: none;
+  transition: opacity 0.3s ease;
+}
+
+.card__like-btn:hover {
+  opacity: 1;
 }
 
 @media screen and (max-width: 627px) {
@@ -37,13 +45,14 @@
   }
 
   .card__title {
+    max-width: 250px;
     font-size: 16px;
     line-height: 1;
   }
 
   .card__like-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 20px;
+    height: 18px;
+    cursor: pointer;
   }
 }
