updated card.css cards.css and profile.css

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,5 @@
 .card__title {
-  margin: 0 auto;
+  margin: 0;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -26,7 +26,6 @@
 
 .card__like-btn {
   background: url(../images/like.svg) center/contain no-repeat;
-  cursor: pointer;
   width: 23px;
   height: 20px;
   background-color: transparent;
