--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,7 +1,35 @@
 .modal {
-    visibility: hidden;
+visibility: hidden;
+background-color: #00000080;
+position: fixed;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .modal_is-opened {
-    visibility: visible;
+visibility: visible;
+}
+
+.modal__container {
+max-width: 730px;
+width: 100%;
+border-radius: 8px;
+background-color: #fff
+}
+
+.modal__title {
+    padding: 32px 50px 0;
+}
+
+.modal__form {
+    padding: 0 50px 32px;
+}
+
+.modal__close-btn {
+    
 }
