--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -19,17 +19,69 @@ visibility: visible;
 max-width: 730px;
 width: 100%;
 border-radius: 8px;
-background-color: #fff
-}
-
-.modal__title {
-    padding: 32px 50px 0;
-}
-
-.modal__form {
-    padding: 0 50px 32px;
+background-color: #fff;
+padding: 32px 50px;
+position: relative;
 }
 
 .modal__close-btn {
-    
-}
+    position: absolute;
+    top: 32px;
+    right: 50px;
+    width: 40px;
+    height: 40px;
+    background-image: url(../images/Close-Icon.svg);
+    box-shadow: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    }
+
+    .modal__title {
+margin: 0 0 32px;
+font-weight: 500;
+font-size: 32px;
+line-height: 100%;
+    }
+
+    .modal__form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .modal__label {
+        margin: 0 0 32px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 110.;
+        color: #212121B2;
+
+    }
+
+    .modal__input {
+        display: block;
+        margin: 8px 0 0;
+        width:100%;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 100%;
+        color: #2121214D;
+        border-radius: 8px;
+        padding:16px 0 16px 12px; 
+    }
+
+    .modal__input::placeholder {
+        color: #2121214d;
+    }
+
+    .modal__submit-btn {
+        width: 156px;
+        height: 52px;
+        padding: 18px 32px;
+        border-radius: 8px;
+        background-color: #212121;
+        color: #FCF5E5;
+    }
+
+
+
