--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,6 +9,7 @@ left: 0;
 display: flex;
 justify-content: center;
 align-items: center;
+padding: 10px;
 }
 
 .modal_is-opened {
@@ -66,7 +67,8 @@ line-height: 100%;
         line-height: 100%;
         color: #2121214D;
         border-radius: 8px;
-        padding:16px 0 16px 12px; 
+        padding:16px 12px;
+        box-sizing: border-box; 
     }
 
     .modal__input::placeholder {
@@ -74,12 +76,43 @@ line-height: 100%;
     }
 
     .modal__submit-btn {
-        width: 156px;
-        height: 52px;
+        max-width: 156px;
+        height:52px;
         padding: 18px 32px;
         border-radius: 8px;
         background-color: #212121;
         color: #FCF5E5;
+        cursor: pointer;
+    }
+
+    @media screen and (max-width: 627px) {
+        .modal__title {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 100%;
+        }
+
+        .modal__input {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 100%;
+        }
+
+        .modal__label {
+            margin-bottom: 24px;
+            max-width: 100%;
+        }
+
+        .modal__close-btn {
+            top: 12px;
+            right: 12px;
+        }
+
+        .modal__submit-btn {
+            width: 100%;
+            max-width: none;
+        }
+
     }
 
 
