--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -19,7 +19,6 @@ transition:visibility 0s linear 0.5s,opacity 0.5s linear;
 visibility: visible;
 opacity:1;
 transition-delay:0s;
-
 }
 
 .modal__container {
@@ -74,8 +73,8 @@ position: relative;
         line-height: 1.2;
         border-radius: 8px;
         box-sizing: border-box;
-        text-align: left;
-        vertical-align: baseline; 
+        align-items: baseline;
+    
     }
 
     .modal__input::placeholder {
