--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -28,10 +28,12 @@ border-radius: 8px;
 background-color: #fff;
 padding: 32px 50px;
 position: relative;
+box-sizing: border-box;
 }
 
 .modal__close-btn {
     position: absolute;
+    padding: 0;
     top: 32px;
     right: 50px;
     width: 40px;
@@ -40,7 +42,12 @@ position: relative;
     box-shadow: none;
     border: none;
     background-color: transparent;
-    cursor: pointer;
+    opacity: 0.4;
+    }
+
+    .modal__close-btn:hover {
+    color: #212121;
+     cursor: pointer;
     }
 
     .modal__title {
@@ -66,12 +73,13 @@ position: relative;
     .modal__input {
         display: block;
         width:100%;
-        margin: 0 0 8px;
+        margin: 8px 0 0;
          padding: 16px 0 16px 12px;
          font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         border-radius: 8px;
+        border: 1px solid rgba(33, 33, 33, 0.4);
         box-sizing: border-box;
         align-items: baseline;
     
@@ -86,20 +94,22 @@ position: relative;
         height:52px;
         padding: 18px 32px;
         border-radius: 8px;
-        background-color: #212121;
+        border: none;
+         background-color: #212121;
         color: #FCF5E5;
-        cursor: pointer;
+    }
+
+    .modal__submit-btn:hover {
+          cursor: pointer;
     }
 
     @media screen and (max-width: 627px) {
         .modal__title {
-            font-weight: 500;
             font-size: 20px;
             line-height: 100%;
         }
 
         .modal__input {
-            font-weight: 500;
             font-size: 16px;
             line-height: 100%;
         }
