--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,135 +1,131 @@
 .modal {
-visibility: hidden;
-background-color: #00000080;
-position: fixed;
-top: 0;
-right: 0;
-bottom: 0;
-left: 0;
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 10px;
-visibility:hidden;
-opacity:0;
-transition:visibility 0s linear 0.5s,opacity 0.5s linear;
+  visibility: hidden;
+  background-color: #00000080;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_is-opened {
-visibility: visible;
-opacity:1;
-transition-delay:0s;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
-max-width: 730px;
-width: 100%;
-border-radius: 8px;
-background-color: #fff;
-padding: 32px 50px;
-position: relative;
-box-sizing: border-box;
+  max-width: 730px;
+  width: 100%;
+  border-radius: 8px;
+  background-color: #fff;
+  padding: 32px 50px;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .modal__close-btn {
-    position: absolute;
-    padding: 0;
-    top: 32px;
-    right: 50px;
-    width: 40px;
-    height: 40px;
-    background-image: url(../images/Close-Icon.svg);
-    box-shadow: none;
-    border: none;
-    background-color: transparent;
-    opacity: 0.4;
-    }
-
-    .modal__close-btn:hover {
-    color: #212121;
-     cursor: pointer;
-    }
-
-    .modal__title {
-    margin: 0 0 32px;
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 100%;
-    }
-
-    .modal__form {
-     display: flex;
-    flex-direction: column;
-    }
-
-    .modal__label {
-        margin: 0 0 32px;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 110.;
-        color: #212121B2;
+  position: absolute;
+  padding: 0;
+  top: 32px;
+  right: 50px;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/Close-Icon.svg);
+  box-shadow: none;
+  border: none;
+  background-color: transparent;
+  opacity: 0.4;
 }
 
-    .modal__input {
-        display: block;
-        width:100%;
-        margin: 8px 0 0;
-         padding: 16px 0 16px 12px;
-         font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        border-radius: 8px;
-        border: 1px solid rgba(33, 33, 33, 0.4);
-        box-sizing: border-box;
-        align-items: baseline;
-    
-    }
+.modal__close-btn:hover {
+  opacity: 1;
+  cursor: pointer;
+}
 
-    .modal__input::placeholder {
-        color: #2121214d;
-    }
+.modal__title {
+  margin: 0 0 32px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+}
 
-    .modal__submit-btn {
-        max-width: 156px;
-        height:52px;
-        padding: 18px 32px;
-        border-radius: 8px;
-        border: none;
-         background-color: #212121;
-        color: #FCF5E5;
-    }
+.modal__form {
+  display: flex;
+  flex-direction: column;
+}
 
-    .modal__submit-btn:hover {
-          cursor: pointer;
-    }
+.modal__label {
+  margin: 0 0 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 110;
+  color: #212121b2;
+}
 
-    @media screen and (max-width: 627px) {
-        .modal__title {
-            font-size: 20px;
-            line-height: 100%;
-        }
+.modal__input {
+  display: block;
+  width: 100%;
+  margin: 8px 0 0;
+  padding: 16px 0 16px 12px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  border-radius: 8px;
+  border: 1px solid rgba(33, 33, 33, 0.4);
+  box-sizing: border-box;
+  align-items: baseline;
+}
 
-        .modal__input {
-            font-size: 16px;
-            line-height: 100%;
-        }
+.modal__input::placeholder {
+  color: #2121214d;
+}
 
-        .modal__label {
-            margin-bottom: 24px;
-            max-width: 100%;
-        }
+.modal__submit-btn {
+  max-width: 156px;
+  height: 52px;
+  padding: 18px 32px;
+  border-radius: 8px;
+  border: none;
+  background-color: #212121;
+  color: #fcf5e5;
+}
 
-        .modal__close-btn {
-            top: 12px;
-            right: 12px;
-        }
+.modal__submit-btn:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
 
-        .modal__submit-btn {
-            width: 100%;
-            max-width: none;
-        }
+@media screen and (max-width: 627px) {
+  .modal__title {
+    font-size: 20px;
+    line-height: 100%;
+  }
 
-    }
+  .modal__input {
+    font-size: 16px;
+    line-height: 100%;
+  }
 
+  .modal__label {
+    margin-bottom: 24px;
+    max-width: 100%;
+  }
 
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+  }
 
+  .modal__submit-btn {
+    width: 100%;
+    max-width: none;
+  }
+}
