--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -104,6 +104,10 @@
 }
 
 @media screen and (max-width: 627px) {
+  .modal__container {
+    padding: 22px 12px 12px;
+  }
+
   .modal__title {
     font-size: 20px;
     line-height: 100%;
