fix:card, JS input and reset function

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -24,6 +24,10 @@
   display: block;
 }
 
+.card__image:hover {
+  cursor: pointer;
+}
+
 .card__content {
   display: flex;
   align-items: center;
