--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -89,16 +89,24 @@
   align-items: baseline;
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
 .modal__input::placeholder {
   color: #2121214d;
 }
 
-.modal__error {
+.modal__error_visible {
   display: block;
   color: #ff0000;
   font-size: 16px;
   line-height: 110%;
   margin-top: 8px;
+}
+
+.modal__error {
+  display: none;
 }
 
 .modal__submit-btn {
@@ -114,6 +122,10 @@
 .modal__submit-btn:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+.modal__submit-btn_inactive {
+  opacity: 0.5;
 }
 
 .modal__image-container {
