--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -10,7 +10,6 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
@@ -33,6 +32,53 @@
   padding: 32px 50px;
   position: relative;
   box-sizing: border-box;
+}
+
+#avatar-modal .modal__container {
+  height: 298px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
+}
+
+#avatar-modal .modal__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
+}
+
+#avatar-modal .modal__label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 110%;
+  color: #212121b2;
+}
+
+#avatar-modal .modal__input {
+  padding: 16px 12px;
+  font-size: 20px;
+  border-radius: 8px;
+  border: 1px solid rgba(33, 33, 33, 0.4);
+  box-sizing: border-box;
+  width: 100%;
+}
+
+#avatar-modal .modal__submit-btn {
+  max-width: 156px;
+  height: 52px;
+  padding: 18px 32px;
+  border-radius: 8px;
+  border: none;
+  background-color: #212121;
+  color: #fcf5e5;
+  align-self: flex-end;
+}
+
+#avatar-modal .modal__submit-btn:hover {
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 .modal__close-btn {
@@ -90,7 +136,7 @@
 }
 
 .modal__input_type_error {
-  border: 1px solid #ff0000 0.6;
+  border: 1px solid rgba(255, 0, 0, 0.6);
 }
 
 .modal__input::placeholder {
@@ -154,6 +200,7 @@
   border-radius: 8px;
   border: none;
   text-align: center;
+  max-width: 90vw;
 }
 
 .modal__close_type_preview {
