--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -4,12 +4,51 @@
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
-.profile__avatar {
-  object-fit: cover;
-  height: 190px;
+.profile__avatar-container {
+  position: relative;
   width: 190px;
-  margin-right: 20px;
+  height: 190px;
+}
+
+.profile__avatar-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 8px;
+  padding: 8px 12px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: none;
   border-radius: 8px;
+  cursor: pointer;
+  visibility: hidden;
+  transition: visibility 0s, opacity 0.3s ease;
+  opacity: 0;
+  size: 16px;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.profile__avatar-container:hover .profile__avatar-btn {
+  visibility: visible;
+  opacity: 1;
+}
+
+.profile__avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  display: block;
+}
+
+.profile__avatar-btn::after {
+  content: "Edit Avatar";
 }
 
 .profile__column {
@@ -106,6 +145,15 @@
     text-align: center;
     padding-top: 20px;
     max-width: 288px;
+  }
+
+  .profile__avatar-btn {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .profile__avatar-btn::after {
+    content: "";
   }
 
   .profile__avatar {
