--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -34,53 +34,6 @@
   box-sizing: border-box;
 }
 
-#avatar-modal .modal__container {
-  height: 298px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 32px;
-}
-
-#avatar-modal .modal__form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 32px;
-}
-
-#avatar-modal .modal__label {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 110%;
-  color: #212121b2;
-}
-
-#avatar-modal .modal__input {
-  padding: 16px 12px;
-  font-size: 20px;
-  border-radius: 8px;
-  border: 1px solid rgba(33, 33, 33, 0.4);
-  box-sizing: border-box;
-  width: 100%;
-}
-
-#avatar-modal .modal__submit-btn {
-  max-width: 156px;
-  height: 52px;
-  padding: 18px 32px;
-  border-radius: 8px;
-  border: none;
-  background-color: #212121;
-  color: #fcf5e5;
-  align-self: flex-end;
-}
-
-#avatar-modal .modal__submit-btn:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
 .modal__close-btn {
   position: absolute;
   padding: 0;
@@ -218,6 +171,79 @@
 
 .modal__close_type_preview:hover {
   opacity: 0.4;
+}
+
+#modal__delete-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 32px;
+}
+
+.modal__delete-btn {
+  height: 52px;
+  width: 156px;
+  gap: 20px;
+  background-color: rgba(255, 101, 101, 1);
+  color: #212121;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  padding: 18px 32px;
+}
+
+.modal__delete-btn:hover {
+  background-color: rgba(255, 51, 51, 1);
+}
+
+.modal__cancel-btn {
+  height: 52px;
+  width: 156px;
+  background-color: white;
+  color: black;
+  border: 1px solid rgba(33, 33, 33, 1);
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  padding: 18px 32px;
+}
+
+.modal__cancel-btn:hover {
+  color: #212121;
+  border: 1px solid #212121;
+}
+
+.modal__delete_close-btn {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  margin-left: 12px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  background-image: url("../images/ModalCloseIcon.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.modal__delete_close-btn:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
