--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -58,6 +58,7 @@
   font-weight: 500;
   font-size: 32px;
   line-height: 100%;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 .modal__form {
@@ -72,13 +73,14 @@
   line-height: 110%;
   color: #212121b2;
   display: block;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 .modal__input {
   display: block;
   width: 100%;
   margin: 8px 0 0;
-  padding: 16px 0 16px 12px;
+  padding: 16px 12px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -108,11 +110,15 @@
 .modal__submit-btn {
   max-width: 156px;
   height: 52px;
-  padding: 18px 32px;
+  padding: 18px 49px;
   border-radius: 8px;
   border: none;
   background-color: #212121;
   color: #fcf5e5;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
 }
 
 .modal__submit-btn:hover {
@@ -181,7 +187,21 @@
   margin-top: 32px;
 }
 
-.modal__delete-btn {
+#modal__delete-form .modal__container {
+  width: 630px;
+  height: 172px;
+  padding: 32px 20px;
+  border-radius: 8px;
+  gap: 32;
+  color: rgba(255, 255, 255, 1);
+}
+
+#modal__delete-form .modal__title {
+  width: 590px;
+  height: 24px;
+}
+
+#modal__delete-form .modal__submit-btn {
   height: 52px;
   width: 156px;
   gap: 20px;
@@ -197,11 +217,13 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
-  padding: 18px 32px;
+  padding: 18px 49px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.modal__delete-btn:hover {
+#modal__delete-form .modal__submit-btn:hover {
   background-color: rgba(255, 51, 51, 1);
+  color: #212121;
 }
 
 .modal__cancel-btn {
@@ -219,12 +241,13 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
-  padding: 18px 32px;
+  padding: 18px 49px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .modal__cancel-btn:hover {
-  color: #212121;
-  border: 1px solid #212121;
+  background-color: #212121;
+  color: #ffffff;
 }
 
 .modal__delete_close-btn {
@@ -248,12 +271,15 @@
 
 @media screen and (max-width: 627px) {
   .modal__container {
-    padding: 22px 12px 12px;
+    max-width: 320px;
+    padding: 22px 12px;
   }
 
   .modal__title {
     font-size: 20px;
-    line-height: 100%;
+    font-weight: 500;
+    line-height: 120%;
+    max-width: 250px;
   }
 
   .modal__input {
