--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -51,6 +51,13 @@
   content: "Edit Avatar";
 }
 
+.profile-avatar-input {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+}
+
 .profile__column {
   display: flex;
   flex-direction: column;
@@ -169,8 +176,8 @@
     align-items: center;
     top: auto;
     left: auto;
-    bottom: 0;
-    right: 0;
+    bottom: 4.66px;
+    right: 4.66px;
     width: 23.34px;
     height: 23.34px;
     padding: 0;
@@ -185,6 +192,10 @@
 
   .profile__avatar-btn::after {
     content: "";
+  }
+
+  .profile__pencil-icon {
+    margin-left: 8px;
   }
 
   .profile__name {
